--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Hilmi Ouelhazi # the main title
 
-tagline: nice nice # it will display as the subtitle
+tagline: Just my personal blog # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -29,7 +29,7 @@ github:
   username: Hilmi-z # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: hilmi_walhazi # change to your Twitter username
 
 social:
   # Change to your full name.
@@ -38,7 +38,7 @@ social:
   email: hilmiouelhazi@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
+    - https://twitter.com/hilmi_walhazi # change to your Twitter homepage
     - https://github.com/Hilmi-z # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
